--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>MyInboxer.com - The Spam Guardian</title>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <!-- Google Fonts - Updated to include Mulish (for display font) -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,9 +38,10 @@
                         'card-bg': '#FFFFFF',
                     },
                     fontFamily: {
-                        sans: ['Space Grotesk', 'sans-serif'],
+                        //sans: ['Space Grotesk', 'sans-serif'],  OK
                         // Updated Title font to Mulish
-                        display: ['Mulish', 'sans-serif'],
+                        //display: ['Mulish', 'sans-serif'],  OK
+                        display: ['Space Grotesk', 'sans-serif'],
                     },
                     boxShadow: {
                         'solid': '6px 6px 0px 0px rgba(0,0,0,1)',
