--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MyInboxer.com - The Spam Guardian</title>
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <title>MyInboxer.com - Rescue emails from Spam</title>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
         <!-- Google Fonts - Updated to include Mulish (for display font) -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
