--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
     <body class="bg-paper text-ink font-sans overflow-x-hidden paper-texture">
         <!-- Navigation (Pill Style) - Added Blog link and structured buttons -->
         <nav class="fixed w-full z-50 px-6 py-6 transition-all duration-300">
-            <div class="max-w-7xl mx-auto flex justify-between items-center bg-white/80 backdrop-blur-md rounded-full px-6 py-3 border-2 border-ink shadow-solid-sm">
-                <img src="images/logo.svg" width="200">
+            <div class="max-w-7xl mx-auto flex justify-between items-center bg-white/80 backdrop-blur-md rounded-full px-6 py-3 border-2 border-ink shadow-solid-sm"><a href="#title" target="_top"><img src="images/logo.svg" width="200"></a>
                 <div class="hidden md:flex items-center gap-4">
                     <a href="#" class="font-bold uppercase tracking-wide hover:text-rescue-orange transition-colors"> <!-- Added Blog link HERE --> </a>
                     <a href="#title" class="bg-ink text-white px-6 py-2 rounded-full font-bold uppercase tracking-wide hover:bg-rescue-orange transition-colors border-2 border-transparent">
@@ -112,7 +111,7 @@
                 <h1 class="font-display text-5xl md:text-7xl lg:text-8xl font-black leading-[0.95] tracking-tight mb-8 reveal-on-scroll text-ink">Every Day, Real Customers&apos; Emails Are&nbsp;<span class="relative inline-block mt-2"><span class="relative z-10">Lost In Spam!</span><svg class="absolute bottom-1 left-0 w-full h-4 text-rescue-orange -z-0" viewBox="0 0 100 10" preserveAspectRatio="none">
                             <path d="M0 5 Q 50 10 100 5" stroke="currentColor" stroke-width="8" fill="none"></path>
                         </svg> </span></h1>
-                <p class="font-medium leading-relaxed max-w-2xl mb-12 mx-auto reveal-on-scroll text-gray-700 text-xl" style="transition-delay: 100ms;">Stop losing money and trust to over&#8209;aggressive filters!<br>&nbsp;<b>My Inb</b><b><code class="text-orange-600 font-medium leading-relaxed"><b><span style="font-weight: normal;"><span><b>o</b></span></span></b></code></b><b>xer</b> monitors and&nbsp;<span class="bg-yellow-200 px-1">recovers legitimate customer emails</span>&nbsp;from spam across your entire Google Workspace and Microsoft 365.</p>
+                <p class="font-medium leading-relaxed max-w-2xl mb-12 mx-auto reveal-on-scroll text-gray-700 text-xl" style="transition-delay: 100ms;">Stop losing money and trust to over&#8209;aggressive filters!<br>&nbsp;<b>My Inb</b><b><code class="text-orange-600 font-medium leading-relaxed"><b><a href="MyInboxer" target="_top"><span style="font-weight: normal;"><span><b>o</b></span></span></a></b></code></b><b>xer</b> monitors and&nbsp;<span class="bg-yellow-200 px-1">recovers legitimate customer emails</span>&nbsp;from spam across your entire Google Workspace and Microsoft 365.</p>
                 <!-- NEW HERO FORM with Honeypot Field -->
                 <div class="w-full max-w-lg mx-auto reveal-on-scroll" style="transition-delay: 200ms;">
                     <form onsubmit="handleWaitlist(event)" class="flex flex-col md:flex-row gap-4 items-stretch">
