--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <body class="bg-paper text-ink font-sans overflow-x-hidden paper-texture">
         <!-- Navigation (Pill Style) - Added Blog link and structured buttons -->
         <nav class="fixed w-full z-50 px-6 py-6 transition-all duration-300">
-            <div class="max-w-7xl mx-auto flex justify-between items-center bg-white/80 backdrop-blur-md rounded-full px-6 py-3 border-2 border-ink shadow-solid-sm"><a href="#title" target="_top"><img src="images/logo.svg" width="200"></a>
+            <div class="max-w-7xl mx-auto flex justify-between items-center bg-white/80 backdrop-blur-md rounded-full px-6 py-3 border-2 border-ink shadow-solid-sm"><a href="#" target="_top"><img src="images/logo.svg" width="200"></a>
                 <div class="hidden md:flex items-center gap-4">
                     <a href="#" class="font-bold uppercase tracking-wide hover:text-rescue-orange transition-colors"> <!-- Added Blog link HERE --> </a>
                     <a href="#title" class="bg-ink text-white px-6 py-2 rounded-full font-bold uppercase tracking-wide hover:bg-rescue-orange transition-colors border-2 border-transparent">
