--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 const response = await fetch('https://script.google.com/macros/s/AKfycbzdB45R-jwvtn1UFbmTtmFCWq0OetfLRMHIq0x6T5lfpsf7IIUXLhio1u7ftIzDN95zkQ/exec', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'text/plain;charset=utf-8',
+                        'Content-Type': 'application/json',
                     },
                     body: JSON.stringify(payload),
                 });
