remove Content-Type

--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@
                 //const response = await fetch('https://backend-liart-five-73.vercel.app/api/waitlist', {
                 const response = await fetch('https://script.google.com/macros/s/AKfycbz-MhtjqFvO-_dyzaRe6VZA7_UqBJom9hdz16Vm-9urveAk-bKjKae7hv5zAPftbMkxJg/exec', {
                     method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
+                 //   headers: {
+                 //       'Content-Type': 'application/json',
+                 //   },
                     body: JSON.stringify(payload),
                 });
 
