--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <!-- Footer -->
             <footer class="absolute bottom-0 w-full p-6 text-center text-gray-500 text-sm">
                 <p>&copy; 2025 MyInboxer. Designed with 🧡 &amp; ☕.</p>
-				<p><a href="http://www.myinboxer.com/privacy.html">Privacy Policy</a> / <a href="http://www.myinboxer.com/tos.html">ToS</a></p>
+				<p><a href="https://www.myinboxer.com/privacy.html">Privacy Policy</a> / <a href="https://www.myinboxer.com/tos.html">ToS</a></p>
             </footer>
         </section>
     </body>
