--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                     Stop losing money and trust to over&#8209;aggressive filters!<br>
                     <b>MyInboxer</b> monitors and&nbsp;
                     <span class="bg-yellow-200 px-1">recovers legitimate customer emails</span>
-                    &nbsp;from spam across your entire Google Workspace and Microsoft 365.
+                    &nbsp;from spam across your entire Google Workspace and Microsoft 365.<a href="https://myinboxer.com/privacy.html">Privacy Policy</a>
                 </p>
                 
                 <!-- WAITLIST FORM - UPDATED -->
