Update and rename prelaunch2.html to index.html

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 </div>
                 <!-- Footer Text -->
                 <div class="mt-2 space-y-2">
-                    <p>&copy; 2026 MyInboxer. Designed with 🧡 &amp; ☕.</p>
+                    <p>&copy; 2026 MyInboxer.</p>
                     <p><a href="https://myinboxer.com/privacy.html" class="hover:text-gray-300 transition-colors">Privacy Policy</a> /  <a href="https://myinboxer.com/tos.html" class="hover:text-gray-300 transition-colors">ToS</a></p>
                 </div>
             </footer>
