--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                         <button type="submit" class="group relative flex-shrink-0">
                             <span class="absolute inset-0 translate-x-1.5 translate-y-1.5 bg-ink rounded-full transition-transform group-hover:translate-x-1 group-hover:translate-y-1"></span>
                             <span class="relative inline-block bg-rescue-orange text-white text-xl font-bold uppercase tracking-wider px-8 py-4 rounded-full border-2 border-ink group-hover:-translate-y-0.5 transition-transform">
-                                Join </span>
+                                Join the list </span>
                         </button>
                     </form>
                 </div>
