--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     <div class="group transition-transform duration-200 hover:translate-x-[2px] hover:translate-y-[2px]"><a href="https://x.com/MyInboxer" target="_top" class="block"> <img src="images/twitter-x.svg" width="35" height="35" alt="Twitter" class="transition-opacity duration-200 group-hover:opacity-90"> </a>
                     </div>
                     <!-- LinkedIn -->
-                    <div class="group transition-transform duration-200 hover:translate-x-[2px] hover:translate-y-[2px]"><a href="https://linkedin.com/MyInboxer" target="_top" class="block"> <img src="images/Linkedin.svg" width="35" height="35" alt="LinkedIn" class="transition-opacity duration-200 group-hover:opacity-90"> </a>
+                    <div class="group transition-transform duration-200 hover:translate-x-[2px] hover:translate-y-[2px]"><a href="https://www.linkedin.com/company/myinboxer" target="_top" class="block"> <img src="images/Linkedin.svg" width="35" height="35" alt="LinkedIn" class="transition-opacity duration-200 group-hover:opacity-90"> </a>
                     </div>
                 </div>
                 <!-- Footer Text -->
